# AwesomeCurses

./: .gitignore  CMakeLists.txt  curse_info.cc  curse_maze.cc
include/: kruskal.hpp
src/: kruskal.cc
